# tictacglobe

./: .eslintrc.json  .gitignore  README.md  next-i18next.config.js  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
app/: globals.css
components/: Autocomplete.tsx  Field.tsx  Header.tsx  Layout.tsx  Loading.module.css  Loading.tsx  MarkdownModal.tsx  Settings.tsx  Share.tsx  TableHeading.module.css  TableHeading.tsx  Timer.tsx  styles.tsx
components/common/: Confirmation.tsx  Loading.tsx  ThemeSwitch.tsx
data/: games1.json  preprocessing.ipynb
data/countries/: countries-en.csv  countries-en.json
data/games/de/: games-20230906-012130-first-german-de.json
data/games/en/: games-20230902-224254-with-difficulty-en.json
pages/: Game.module.css  _app.tsx  game.tsx  index.tsx  test.tsx
pages/api/: categories.ts  game.ts
prisma/: schema.prisma
prisma/migrations/20231026111609_init/: migration.sql
public/: .gitignore  README-DE.md  game-info-en.md
public/data/: .gitignore  .vercelignore  countries.json
public/data/countries/: countries-de.csv  (+4 more)
src/: api.utils.ts  backend.util.ts  db.ts  db.types.ts  game.types.ts  util.ts  zustand.ts  zustand.util.ts
src/preprocessing/: Untitled.ipynb  category.py  colors.py  difficulty.py  flag_colors.py  game.py  game_stats.ipynb  generator.py  insights.ipynb  preprocessing.ipynb  preprocessing.py  preprocessing_countries_en.ipynb  preprocessing_countries_translated.ipynb  run_preprocessing.py  run_preprocessing_new.ipynb  tests_new.ipynb  utils.py
styles/: styles.less
(+50 files in other folders)
