[tool.poetry]
name = "tictacglobe"
version = "0.2.0"
description = ""
authors = ["Raimund Hensen <mail@raimund-hensen.de>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
ipython = "^8.29.0"
ipykernel = "^6.29.5"
tqdm = "^4.67.0"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
